--- a/recipes/mexicanrice.html
+++ b/recipes/mexicanrice.html
@@ -7,5 +7,38 @@
 </head>
 
 <body>
+    <h1>Marvelous Mexican Rice</h1>
+    <img src="../img/mexicanrice.jpg" alt="Freshly prepared mexican Rice with tomatoes and cilantro">
+
+    <h2>Description</h2>
+        <p>Maybe you're looking for a restaurant-style Mexican rice dish to pair with your carne asada. This simple recipe is a popular choice that can complete your meal. I'll show you how to transform bland grains of white rice into a flavorful pot, bursting with subtly sweet and earthy notes.</p>
+  
+        <p>The rice is toasted on the stovetop to develop a nuttiness from the browning process. Then it simmers with vegetables and fragrant spices. Each grain absorbs flavors in the liquid and takes on an orange hue. You can turn a bland rice dish into an amazing one in a few easy steps.</p>
+
+        <p>Long grain white rice is best because the elongated shape yields light grains that stay separate after absorbing water. Extra-long grain and jasmine rice also work well. I recommend rinsing the rice to wash away any excess starches on the surface that could make the texture sticky. Then drain well!</p>
+
+    <h2>Ingredients</h2>
+        <ul>
+            <li>2 cups long grain rice, extra long grain, or jasmine</li>
+            <li>2 tablespoons olive oil</li>
+            <li>½ cup diced yellow onion, ¼” dice</li>
+            <li>1 tablespoon minced garlic</li>
+            <li>1 teaspoon cumin</li>
+            <li>1 teaspoon kosher salt</li>
+            <li>1 tablespoon tomato paste</li>
+            <li>1 cup diced tomatoes, ¼” dice</li>
+            <li>4 cups unsalted chicken stock, or broth</li>
+            <li>1 tablespoon chopped cilantro</li>   
+        </ul>
+
+    <h2>Steps</h2>
+        <ol>
+            <li><strong>Prepare the Rice</strong> - Add the rice to a fine-mesh strainer. Rinse under cool running water until it runs clear, scrubbing the grains with your fingers several times, about 1 minute. Shake the colander and press to drain the excess water until dry.</li>
+            <li><strong>Saute the Aromatics</strong> - Heat a Dutch oven or medium saucepan over medium heat, and add olive oil. Once hot, add in the onion and saute until slightly translucent, 1 minute. Add the garlic and saute until fragrant, 30 seconds.</li>
+            <li><strong>Saute the Rice</strong> - Add the rice and turn the heat to medium-high. Saute, frequently stirring, until the grains are lightly toasted, 4 to 5 minutes. Make sure to scrape the bottom of the pan, so the rice does not burn.</li>
+            <li><strong>Add Flavorings</strong> - Turn the heat down to medium, add the cumin and salt, and saute for 30 seconds. Add the tomato paste, stir to combine, and cook for 30 seconds. Add in diced tomatoes and stir to combine.</li>
+            <li><strong>Simmer</strong> - Slowly pour in the chicken stock, and bring to a boil. Cover and then reduce to a simmer over low heat. Cook until the rice is tender, about 20 minutes.</li>
+            <li><strong>Let it Sit</strong> - Turn off the heat, keep the cover on, and allow the rice to sit for 10 minutes to absorb all the water. Gently fluff with a fork—taste and season with more salt as desired. Garnish with cilantro leaves.</li>
+        </ol>
     
 </body>
