--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/bahnmi.html">Delicious Bahn Mi Sandwich</a></li>
+            <li><a href="./recipes/brownies.html">Scrumptious One Bowl Brownies</a></li>
+            <li><a href="./recipes/mexicanrice.html">Marvelous Mexican rice</a></li>
+        </ul>
 
 
 </body>
