Add styles.css and apply to all .html files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta lang="en">
     <meta charset="UTF-8">
     <title>Odin Recipes Home</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
@@ -13,6 +14,6 @@
       <li><a href="./recipes/brownies.html">Scrumptious One Bowl Brownies</a></li>
       <li><a href="./recipes/mexicanrice.html">Marvelous Mexican rice</a></li>
     </ul>
-    
+
   </body>
 </html>
