--- a/recipes/bahnmi.html
+++ b/recipes/bahnmi.html
@@ -4,11 +4,12 @@
     <meta lang="en">
     <meta charset="UTF-8">
     <title>Bahn Mi</title>
+    <link rel="stylesheet" href="/repos/odin-recipes/styles.css">
   </head>
 
   <body>
     <h1>Delicious Bahn Mi Sandwich</h1>
-    <img src="../img/bahnmi.jpg" alt="A freshly prepared Vietnamese bahn mi sandwich">
+    <img src="../img/bahnmi.jpg" class ="foodpic" alt="A freshly prepared Vietnamese bahn mi sandwich">
 
     <h2>Description</h2>
       <p> Iwent a little overboard when buying fish sauce for nuoc cham—two large bottles of Three Crabs. Not that it will go bad anytime soon, but with so much in the house, I feel a need to use it now. A marinade for beef seemed like an excellent choice.</p>
@@ -35,6 +36,6 @@
         <li>Light one chimney full of charcoal. When all the charcoal is lit and covered with gray ash, pour out and spread the coals evenly over entire surface of coal grate. Set cooking grate in place, cover grill and allow to preheat for 5 minutes. Clean and oil the grilling grate. Grill beef over high heat until browned on both sides, about 2-3 minutes per side.</li>
         <li>Place baguette slices on grill, cut side down, and toast until browned, about 1 minute. Remove from grill and evenly divide beef on bottom slices of bread; top with pickled carrots, daikons, and cilantro. Spread sriracha mayo on top slices of bread, arrange on top of assemble sandwich and serve.</li>
       </ol>
-      
+
   </body>
 </html>
