--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -4,11 +4,12 @@
     <meta lang="en">
     <meta charset="UTF-8">
     <title>One Bowl Brownies</title>
+    <link rel="stylesheet" href="/repos/odin-recipes/styles.css">
   </head>
 
   <body>
     <h1>Scrumptious One Bowl Brownies</h1>
-    <img src="../img/brownies.jpg" alt="A pile of freshly baked brownies">
+    <img src="../img/brownies.jpg" class="foodpic" alt="A pile of freshly baked brownies">
 
     <h2>Description</h2>
       <p>Brownies are hands down one of my all-time favorite desserts. I love this brownie recipe, but the other day I needed a quick and EASY dessert because some friends stopped by unexpectedly and I wanted to serve them something sweet. I whipped up my One Bowl Brownies and everyone was dying over the deliciousness!</p>
@@ -33,6 +34,6 @@
         <li>Sift in flour and cocoa. Add the salt and espresso powder, if using, and stir until just combined. Don't over mix. Fold in 1 cup of chopped chocolate. Spread evenly into prepared pan and sprinkle the remaining ¼ cup of chopped chocolate on top of the brownies.</li>
         <li>Bake for 25-30 minutes on the middle rack in the oven until the brownies are just set to touch. Don't over bake the brownies. They will set up as they cool. Remove from oven and let cool before cutting into squares. You can sprinkle them with a little flaky sea salt, if desired.</li>
       </ol>
-      
+
   </body>
 </html>
