--- a/recipes/mexicanrice.html
+++ b/recipes/mexicanrice.html
@@ -4,11 +4,12 @@
     <meta lang="en">
     <meta charset="UTF-8">
     <title>Homemade Mexican Rice</title>
+    <link rel="stylesheet" href="/repos/odin-recipes/styles.css">
   </head>
 
   <body>
     <h1>Marvelous Mexican Rice</h1>
-    <img src="../img/mexicanrice.jpg" alt="Freshly prepared mexican Rice with tomatoes and cilantro">
+    <img src="../img/mexicanrice.jpg" class ="foodpic" alt="Freshly prepared mexican Rice with tomatoes and cilantro">
 
     <h2>Description</h2>
       <p>Maybe you're looking for a restaurant-style Mexican rice dish to pair with your carne asada. This simple recipe is a popular choice that can complete your meal. I'll show you how to transform bland grains of white rice into a flavorful pot, bursting with subtly sweet and earthy notes.</p>
@@ -38,6 +39,6 @@
         <li><strong>Simmer</strong> - Slowly pour in the chicken stock, and bring to a boil. Cover and then reduce to a simmer over low heat. Cook until the rice is tender, about 20 minutes.</li>
         <li><strong>Let it Sit</strong> - Turn off the heat, keep the cover on, and allow the rice to sit for 10 minutes to absorb all the water. Gently fluff with a fork—taste and season with more salt as desired. Garnish with cilantro leaves.</li>
         </ol> 
-        
+
   </body>
 </html>
